<?xml version="1.0"?>
<package format="2">
  <name>laserscan_to_pointcloud</name>
  <version>0.0.0</version>
  <description>pc converter.</description>

  <maintainer email="pixhawk@todo.todo">TBD</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>tf</depend>
</package>
